--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -32,10 +32,20 @@
 .gallery-item .info {
   padding-top: 8px;
   text-align: center;
+  display: flex;            
+  justify-content: center;  
+  gap: 16px;               
+  flex-wrap: wrap;         
 }
 
 .gallery-item .info p {
-  margin: 4px 0;
+  margin: 0;                
+  white-space: nowrap;      
+  font-size: 14px;        
+}
+
+.gallery-item .info b {
+  margin-right: 5px;       
 }
 
 
